--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rahul Kumar Gupta - Personal Website</title>
+</head>
+<body>
+    <header>
+        <h1>Welcome to My Personal Website</h1>
+    </header>
 
+    <section>
+        <h2>About Me</h2>
+        <p>Raul The Indian Wall</p>
+    </section>
+
+    <section>
+        <h2>Contact</h2>
+        <p>You can reach me at rahul.rkg85@gmail.com.</p>
+    </section>
+</body>
+</html>
